# raytracer

./: Cargo.toml
src/: lib.rs  main.rs  vector_generic.rs
src/camera/: mod.rs
src/image/: mod.rs
src/math/: mod.rs
src/objs/: hittable.rs  hittablelist.rs  mod.rs  sphere.rs
src/primitives/: ray.rs  vector.rs
